# serde_any

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
examples/: settings.rs  transcode.rs
src/: backend.rs  de.rs  error.rs  format.rs  lib.rs  ser.rs  test_util.rs
tests/: test_xml.rs  there_and_back_again.rs
