[package]
name = "serde_any"
version = "0.4.1"
authors = ["Miha Čančula <miha@noughmad.eu>"]
license = "MIT OR Apache-2.0"
description = "Dynamic serialization and deserialization with the format chosen at runtime"
repository = "https://gitlab.com/Noughmad/serde_any"
keywords = ["serde", "serialization", "json", "toml", "yaml"]
categories = ["encoding"]
readme = "README.md"

[badges]
gitlab = { repository = "Noughmad/serde_any", branch = "master" }
appveyor = { repository = "Noughmad/serde_any", service = "gitlab" }
codecov = { repository = "Noughmad/serde_any", service = "gitlab" }

[features]
default = ["toml", "json", "yaml", "ron", "xml", "url"]
json = ["serde_json"]
yaml = ["serde_yaml"]
xml = ["serde-xml-rs"]
url = ["serde_urlencoded"]

[dependencies]
serde = "1"
toml = { version = "0.4", optional = true }
serde_json = { version = "1", optional = true }
serde_yaml = { version = "0.7", optional = true }
ron = { version = "0.3", optional = true }
serde-xml-rs = { git = "https://github.com/RReverser/serde-xml-rs.git", rev = "551c78d", optional = true }
serde_urlencoded = { version = "0.5.2", optional = true }
failure = "0.1.1"

[dev-dependencies]
serde_derive = "1"
version-sync = "0.5.0"
matches = "0.1"
structopt = "0.2"
serde-value = "0.5"
