[package]
name = "serde_any"
version = "0.5.1"
authors = ["Miha Čančula <miha@noughmad.eu>"]
license = "MIT OR Apache-2.0"
description = "Dynamic serialization and deserialization with the format chosen at runtime"
repository = "https://gitlab.com/Noughmad/serde_any"
keywords = ["serde", "serialization", "json", "toml", "yaml"]
categories = ["encoding"]
readme = "README.md"

[badges]
gitlab = { repository = "Noughmad/serde_any", branch = "master" }
appveyor = { repository = "Noughmad/serde_any", service = "gitlab" }
codecov = { repository = "Noughmad/serde_any", service = "gitlab" }

[features]
default = ["toml", "json", "yaml", "ron", "xml", "url"]
json = ["serde_json"]
yaml = ["serde_yaml"]
xml = ["serde-xml-any"]
url = ["serde_urlencoded"]

[dependencies]
serde = "1.0"
toml = { version = "0.5", optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.8", optional = true }
ron = { version = "0.5", optional = true }
serde-xml-any = { version = "0.0.3", optional = true }
serde_urlencoded = { version = "0.7", optional = true }
failure = "0.1"

[dev-dependencies]
serde_derive = "1.0"
version-sync = "0.9"
matches = "0.1"
structopt = "0.3"
serde-value = "0.7"
